[gd_scene load_steps=12 format=1]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://addons/gamejolt_api/gjapi.gd" type="Script" id=2]
[ext_resource path="res://addons/gamejolt_api/gj_icon.png" type="Texture" id=3]
[ext_resource path="res://Graphics/grass.png" type="Texture" id=4]
[ext_resource path="res://Graphics/pixelfont.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Graphics/titlefont.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Scenes/backgroundscroller.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.230469, 0.230469, 0.230469, 1 )
light_color = Color( 0.609375, 0.609375, 0.609375, 0.633882 )
dark_color = Color( 0.507812, 0.507812, 0.507812, 1 )
border_size = 4
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.140625, 0.140625, 0.140625, 1 )
light_color = Color( 0.566406, 0.566406, 0.566406, 0.508196 )
dark_color = Color( 0.564706, 0.564706, 0.564706, 0.505882 )
border_size = 4
border_blend = true
draw_bg = true

[sub_resource type="Theme" id=3]

default_font = ExtResource( 5 )
ToolButton/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
ToolButton/colors/font_color_disabled = Color( 0.9, 0.95, 1, 0.3 )
ToolButton/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
ToolButton/colors/font_color_pressed = Color( 1, 1, 1, 1 )
ToolButton/constants/hseparation = 3
ToolButton/fonts/font = null
ToolButton/styles/disabled = null
ToolButton/styles/focus = null
ToolButton/styles/hover = SubResource( 1 )
ToolButton/styles/normal = null
ToolButton/styles/pressed = SubResource( 2 )

[sub_resource type="Animation" id=4]

resource/name = "slowpulse"
length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/scale")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ] }

[node name="TreeRoot" type="Node"]

script/script = ExtResource( 1 )

[node name="GameJoltAPI" type="HTTPRequest" parent="."]

use_threads = false
body_size_limit = -1
max_redirects = 8
script/script = ExtResource( 2 )
__meta__ = { "_editor_icon":ExtResource( 3 ) }
private_key = "019361378474be33e306263e790331f2"
game_id = "244666"

[node name="background" type="Sprite" parent="."]

transform/scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false
modulate = Color( 0.623529, 0.92549, 0.988235, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="StartButton" type="ToolButton" parent="CanvasLayer"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = SubResource( 3 )
margin/left = 151.0
margin/top = 161.0
margin/right = -99.0
margin/bottom = 79.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Start Game"
flat = false

[node name="OptionButton" type="ToolButton" parent="CanvasLayer"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = SubResource( 3 )
margin/left = 143.0
margin/top = 51.0
margin/right = -107.0
margin/bottom = -31.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Options"
flat = false

[node name="HighScoreButton" type="ToolButton" parent="CanvasLayer"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = SubResource( 3 )
margin/left = 148.0
margin/top = -163.0
margin/right = -111.0
margin/bottom = -245.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "High Scores"
flat = false

[node name="QuitButton" type="ToolButton" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = SubResource( 3 )
margin/left = 659.0
margin/top = 720.0
margin/right = 909.0
margin/bottom = 802.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Quit"
flat = false

[node name="Label" type="Label" parent="CanvasLayer"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 426.0
margin/top = 376.0
margin/right = -442.0
margin/bottom = 294.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 2
text = "Super Displacement"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="welcome_user" type="Label" parent="CanvasLayer"]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/rotation = 8.98538
rect/scale = Vector2( 1.02918, 1.02918 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 801.0
margin/top = 211.0
margin/right = 241.0
margin/bottom = 38.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 2
text = "Welcome, "
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/welcome_user"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/slowpulse = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "slowpulse"

[node name="RigidBody2D" parent="." instance=ExtResource( 7 )]

[connection signal="released" from="CanvasLayer/StartButton" to="." method="_on_StartButton_released"]

[connection signal="released" from="CanvasLayer/OptionButton" to="." method="_on_OptionButton_released"]

[connection signal="pressed" from="CanvasLayer/HighScoreButton" to="." method="_on_HighScoreButton_pressed"]

[connection signal="released" from="CanvasLayer/QuitButton" to="." method="_on_QuitButton_released"]


